--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Barbearia Alura</title>
-        <style>
-
-        </style>
     </head>
     <body>
+        <!-- Cabeçalho dentro do conteúdo -->
+        <header>
+            <h1 class="titulo-principal">Barbearia Alura</h1>
+        </header>
+
         <!-- F12 Dev tools no Google Chrome para ver código, html, css, elementos -->
         <img id="banner" src="imagens/banner.jpg" alt="Banner com duas poltronas na barbearia">
 
         <div class="principal">
-            <h1>Sobre a Barbearia Alura</h1>
+            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -24,7 +26,7 @@
             <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
         </div>
         <div class="beneficios">
-            <h2>Benefícios</h2>
+            <h3 class="titulo-centralizado">Benefícios</h3>
 
             <ul>
                 <li class="itens">Atendimento aos clientes</li>
@@ -33,7 +35,7 @@
                 <li class="itens">Profissionais Qualificados</li>
             </ul>
 
-            <img class="imagemBeneficios" src="imagens/beneficios.jpg" alt="Imagem do cliente fazendo a barba">
+            <img class="imagem-beneficios" src="imagens/beneficios.jpg" alt="Imagem do cliente fazendo a barba">
         </div>
     </body>
 </html>
