--- a/produtos.html
+++ b/produtos.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Produtos - Barbearia Alura</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="produtos.css">
+        <link rel="stylesheet" href="estilos/reset.css">
+        <link rel="stylesheet" href="estilos/style.css">
     </head>
     <body>
         <header>
@@ -14,17 +14,39 @@
                 <nav>
                     <ul class="navegacao">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Produtos</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
         <main>
-            Cabelo
-            Barba
-            Cabelo e barba
+            <ul class="produtos">
+                <li>
+                    <h2>Cabelo</h2>
+                    <img src="imagens/cabelo.jpg" alt="Imagem sobre corte de cabelo">
+                    <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+                    <p class="produto-preco">R$ 25,00</p>
+                </li>
+                <li>
+                    <h2>Barba</h2>
+                    <img src="imagens/barba.jpg" alt="Imagem sobre barba">
+                    <p class="produto-descricao">Corte e desenho profissional de barba</p>
+                    <p class="produto-preco">R$ 18,00</p>
+                </li>
+                <li>
+                    <h2>Cabelo e barba</h2>
+                    <img src="imagens/cabelo+barba.jpg" alt="Imagem sobre corte de cabelo e barba">
+                    <p class="produto-descricao">Pacote completo de cabelo e barba</p>
+                    <p class="produto-preco">R$ 35,00</p>
+                </li>
+            </ul>
         </main>
+
+        <footer>
+            <img src="imagens/logo-branco.png" alt="Logo branca">
+            <p class="copyright">&copy; Copyright Barbearia Alura - 2023 </p>
+        </footer>
     </body>
 </html>
