--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
         <title>Contato - Barbearia Alura</title>
         <link rel="stylesheet" href="estilos/reset.css">
         <link rel="stylesheet" href="estilos/style.css">
+        <link rel="icon" href="imagens/favicon.ico" type="image/gif">
     </head>
     <body>
         <header>
