--- a/contato.html
+++ b/contato.html
@@ -25,13 +25,35 @@
         <main>
             <form action="">
                 <label for="nomeSobrenome">Nome e sobrenome</label>
-                <input type="text" id="nomeSobrenome">
+                <input type="text" id="nomeSobrenome" class="input-padrao" required placeholder="João Pedro">
 
                 <label for="email">Email</label>
-                <input type="text" id="email">
+                <input type="email" id="email" class="input-padrao" required placeholder="123@456.com">
 
                 <label for="telefone">Telefone</label>
-                <input type="text" id="telefone">
+                <input type="tel" id="telefone" class="input-padrao" required placeholder="51944444444">
+
+                <label for="mensagem">Mensagem</label>
+                <textarea id="mensagem" cols="67" rows="10" class="input-padrao" required></textarea>
+
+                <div>
+                    <p>Como prefere o nosso contato?</p>
+                    <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
+                    
+                    <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
+                    
+                    <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
+                </div>
+                <div>
+                    <p>Qual horário prefere ser atendido?</p>
+                    <select name="" id="">
+                        <option value="manha">Manhã</option>
+                        <option value="tarde">Tarde</option>
+                        <option value="noite">Noite</option>
+                    </select>
+                </div>
+
+                <label><input type="checkbox" class="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
 
                 <input type="submit" value="Enviar formulário">
             </form>
