Deixando o código mais semântico com fieldset e legend

--- a/contato.html
+++ b/contato.html
@@ -36,22 +36,22 @@
                 <label for="mensagem">Mensagem</label>
                 <textarea id="mensagem" cols="67" rows="10" class="input-padrao" required></textarea>
 
-                <div>
-                    <p>Como prefere o nosso contato?</p>
+                <fieldset>
+                    <legend>Como prefere o nosso contato?</legend>
                     <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
                     
                     <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
                     
                     <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
-                </div>
-                <div>
-                    <p>Qual horário prefere ser atendido?</p>
+                </fieldset>
+                <fieldset>
+                    <legend>Qual horário prefere ser atendido?</legend>
                     <select name="" id="">
                         <option value="manha">Manhã</option>
                         <option value="tarde">Tarde</option>
                         <option value="noite">Noite</option>
                     </select>
-                </div>
+                </fieldset>
 
                 <label><input type="checkbox" class="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
 
