--- a/contato.html
+++ b/contato.html
@@ -46,7 +46,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>Qual horário prefere ser atendido?</legend>
-                    <select name="" id="">
+                    <select>
                         <option value="manha">Manhã</option>
                         <option value="tarde">Tarde</option>
                         <option value="noite">Noite</option>
@@ -55,8 +55,34 @@
 
                 <label><input type="checkbox" class="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
 
-                <input type="submit" value="Enviar formulário">
+                <input type="submit" value="Enviar formulário" class="enviar">
             </form>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td colspan="5">Rio de Janeiro</td> 
+                    </tr>
+                </tbody>
+            </table>
         </main>
 
         <footer>
