--- a/index.html
+++ b/index.html
@@ -4,39 +4,58 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="estilos/style-home.css">
+        <link rel="stylesheet" href="estilos/reset.css">
+        <link rel="stylesheet" href="estilos/style.css">
         <link rel="icon" href="imagens/favicon.ico" type="image/gif">
         <title>Barbearia Alura</title>
     </head>
     <body>
         <!-- Cabeçalho dentro do conteúdo -->
         <header>
-            <h1 class="titulo-principal">Barbearia Alura</h1>
+            <div class="caixa">
+                <h1><img src="imagens/logo.png" alt="Logo da barbearia"></h1>
+
+                <nav>
+                    <ul class="navegacao">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
         <!-- F12 Dev tools no Google Chrome para ver código, html, css, elementos -->
-        <img id="banner" src="imagens/banner.jpg" alt="Banner com duas poltronas na barbearia">
+        <img class="banner" src="imagens/banner.jpg" alt="Banner com duas poltronas na barbearia">
 
-        <div class="principal">
-            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+        <main>
+            <section class="principal">
+                <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+                <img class="utensilios" src="imagens/utensilios.jpg" alt="Utensilios da barbearia">
 
-            <p id="missao" style="font-size: 20px;"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+                <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-        </div>
-        <div class="beneficios">
-            <h3 class="titulo-centralizado">Benefícios</h3>
+                <p id="missao" style="font-size: 20px;"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-            <ul>
-                <li class="itens">Atendimento aos clientes</li>
-                <li class="itens">Espaço diferenciado</li>
-                <li class="itens">Localização</li>
-                <li class="itens">Profissionais Qualificados</li>
-            </ul>
+                <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+            </section>
+            <section class="beneficios">
+                <h3 class="titulo-principal">Benefícios</h3>
 
-            <img class="imagem-beneficios" src="imagens/beneficios.jpg" alt="Imagem do cliente fazendo a barba">
-        </div>
+                <ul>
+                    <li class="itens">Atendimento aos clientes</li>
+                    <li class="itens">Espaço diferenciado</li>
+                    <li class="itens">Localização</li>
+                    <li class="itens">Profissionais Qualificados</li>
+                </ul>
+
+                <img class="imagem-beneficios" src="imagens/beneficios.jpg" alt="Imagem do cliente fazendo a barba">
+            </section>
+        </main>
+        <footer>
+            <img src="imagens/logo-branco.png" alt="Logo branca">
+            <p class="copyright">&copy; Copyright Barbearia Alura - 2023 </p>
+        </footer>
     </body>
 </html>
