--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 
                 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
             </section>
+
+            <section class="mapa">
+                <h1 class="titulo-principal">Nosso estabelecimento</h1>
+                <p> Nossa estabelecimento está localizado no coração da cidade.</p>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117006.39488152678!2d-46.7641678375!3d-23.5881948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5bd9bb943bf5%3A0x6f642995c970f0fe!2scaelum%20alura!5e0!3m2!1spt-BR!2sbr!4v1675992963219!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+
             <section class="beneficios">
                 <h3 class="titulo-principal">Benefícios</h3>
 
@@ -54,6 +62,10 @@
                 </ul>
 
                 <img class="imagem-beneficios" src="imagens/beneficios.jpg" alt="Imagem do cliente fazendo a barba">
+
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             </section>
         </main>
         <footer>
